# bazel-nestjs-monorepo-example

./: .bazelignore  .bazelrc  BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  tsconfig.json
.aspect/bazelrc/: correctness.bazelrc
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
.github/workflows/: ci.bazelrc  ci.yaml
apps/api/: BUILD.bazel
apps/api/src/: api.controller.spec.ts  api.module.ts  api.service.ts
libs/auth/: BUILD.bazel  tsconfig.lib.json
libs/auth/src/: auth.service.spec.ts
tools/: defs.bzl
